--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <div class="filter-row status-filters">
             <ul class="clearfix">
               <li><button class="link disabled" disabled>Status</button></li>
-              <li><button class="link filter-btn">Completed</button></li>
-              <li><button class="link filter-btn">Underway</button></li>
-              <li><button class="link filter-btn">Pre-planning</button></li>
-              <li><button class="link filter-btn">Stalled</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="completed">Completed</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="stalled">Stalled</button></li>
             </ul>
           </div>
           <div class="filter-row country-filters">
