Reverse select/unselect colors, resolves #32
So easy I can do it… Also removed the random “????” from the default
view of description panel

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </ul>
               </div>
               <div class="tab" data-tab="description">
-                <p class="txt-copy">Select a ????...</p>
+                <p class="txt-copy">Select a planning area.</p>
               </div>
             </div>
           </div>
