Small tweaks to filter panel look

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div id='map'></div>
         <div class="panel filters">
           <!-- filter by -->
-          <p class='txt-copy'>Filter by:</p>
+          <p class='txt-copy panel-headline'>Filter by:</p>
           <div class="filter-row status-filters">
             <ul class="clearfix">
               <li><button class="link disabled" disabled>Status</button></li>
