Added back US & Canada under title

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <header class="nav block">
         <div>
           <h1 class="heading">Ocean Planning</h1>
-          <!--<p class="sub-heading">United States and Canada</p>-->
+          <p class="sub-heading">United States and Canada</p>
         </div>
         <div>
           <ul id="country-selector" class="horizontal-list">
