--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <li data-key="Date planning initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
                   <li data-key="Date plan completed"><span class="key">Date Completed:</span><span class="value"></span></li>
                   <li data-key="Ocean activities covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
-                  <li data-key="Lead institution(s)"><span class="key">Lead institution:</span><span class="value"></span></li>
+                  <li data-key="Lead institution(s)"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
                   <li data-key="Website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
                 </ul>
               </div>
