Fixed filtering and resets

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
         </div>
         <div class="panel filters">
           <!-- filter by -->
-          <p class='txt-copy panel-headline'>Filter by status: <button id="resetButton" class="link"><span class="icon-close">&#x2715;</span> clear</button></p>
+          <p class='txt-copy panel-headline'>Filter by status:</p>
           <div class="filter-row status-filters">
             <ul class="clearfix">
-              <li><button class="link filter-btn" data-key="Status" data-value="all">All</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="reset">All</button></li>
               <li><button class="link filter-btn" data-key="Status" data-value="completed">Completed</button></li>
               <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway</button></li>
               <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning</button></li>
@@ -129,6 +129,7 @@
           </div>
           -->
           <div class="tabs">
+            <button id="resetButton" class="link"><!--<span class="icon-close">&#x2715;</span>--> clear</button>
             <div class="filter-row">
               <ul class="clearfix">
                 <li><button class="link" data-target="details">Details</button></li>
