--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <button class="link modal-close">×</button>
           <div class="modal-content txt-copy">
             <h3>United States</h3>
-            <h4>More than 5% of US ocean waters are currently being planned or are already managed with ocean plans.</h4>  
+            <h4>More than 5% of US ocean waters are currently being planned or are already managed with ocean plans.</h4>
 
             <p>US oceans are home to a vast diversity of ecosystems, including the incredibly productive Gulf of Maine, majestic California kelp forests and the rich coral reefs of Hawaii.  Nearly matching this diversity is the array of activities carried out in the ocean by fishermen, shipping vessels, tourism businesses, recreational boaters, conservationists and wildlife advocates, scientists, energy industries, harbormasters, undersea cable companies and all others who enjoy and use the oceans.</p>
 
@@ -63,7 +63,7 @@
           <button class="link modal-close">×</button>
           <div class="modal-content txt-copy">
             <h3>Canada</h3>
-            <h4>More than 28% of Canadian ocean waters are currently being planned or are already managed with ocean plans.</h4>  
+            <h4>More than 28% of Canadian ocean waters are currently being planned or are already managed with ocean plans.</h4>
 
             <p>Canadian oceans are home to a magnificent diversity of ecosystems, from the kelp forests of British Columbia to the polynyas (areas of open water surrounded by sea ice) of Lancaster Sound.  Nearly matching this diversity is the array of activities carried out in the ocean by fishermen, First Nations and Inuit subsistence hunters, shipping vessels, tourism businesses, recreational boaters, conservationists and wildlife advocates, scientists, energy industries, harbormasters, undersea cable companies, and all others who want to enjoy and use the oceans.</p>
 
@@ -71,7 +71,7 @@
 
             <p>In the last decade, the practice of ocean planning has grown in use across the planet, and for good reason.  Like land-use planning, ocean planning can be used to improve decision-making and management, reduce user conflict, protect and conserve ocean wildlife, and increase performance and efficiency in the use of public resources such as tax dollars and agency staff time. Ocean planning can yield benefits for coastal communities and ocean industries who want attractive and healthy seascapes, a more certain regulatory framework and reduced conflicts with other ocean users.</p>
 
-            <p>Aboriginal, Provincial, Territorial, and Federal governments have various degrees of jurisdiction over the many activities that take place in Canadian waters.  Thus, planning for this large area (7.1 million km2, or 70% the size of its land mass) takes shared objective-setting and broader coordination among the different levels of government.  Several First Nations governments, working with provincial government agencies in British Columbia have developed comprehensive ocean plans for their waters. This experience has illustrated that governments working together and with stakeholders is an effective route to generating ocean plans in Canada. It has also shown that ocean plans produce a mosaic of use and conservation that can put coastal communities and the ocean resources on which they depend on a trajectory for a healthy future.</p> 
+            <p>Aboriginal, Provincial, Territorial, and Federal governments have various degrees of jurisdiction over the many activities that take place in Canadian waters.  Thus, planning for this large area (7.1 million km2, or 70% the size of its land mass) takes shared objective-setting and broader coordination among the different levels of government.  Several First Nations governments, working with provincial government agencies in British Columbia have developed comprehensive ocean plans for their waters. This experience has illustrated that governments working together and with stakeholders is an effective route to generating ocean plans in Canada. It has also shown that ocean plans produce a mosaic of use and conservation that can put coastal communities and the ocean resources on which they depend on a trajectory for a healthy future.</p>
           </div>
         </div>
       </div>
@@ -167,12 +167,11 @@
       <!-- embed -->
       <div id="embed" class="modal hide">
         <div class="modal-background modal-close"></div>
-          <div class="modal-inner">
+          <div class="modal-inner txt-copy">
             <button class="link modal-close">×</button>
             <div class="modal-content">
               <div class="header modal-row">
-                <h1>Embed This Map</h1>
-                <button class="link close-button close-modal">&times;</button>
+                <h1 class="heading">Embed This Map</h1>
               </div>
 
               <div class="embed-iframe-wrap modal-row">
@@ -183,10 +182,10 @@
 
               <div class="modal-row">
                 <p class="instructional-step">2. Copy and paste the code below for your website</p>
-                <textarea cols="100" rows="3" id="copypastethis"></textarea>
+                <textarea rows="3" id="copypastethis"></textarea>
                 <p class="tip">This embedded map inherits the position and data layers from the big version. If you'd like it to show another data layer, or a different place, just close this and change the big version to how you want it, then hit EMBED THIS MAP again.</p>
               </div>
-              <p class="close"><button class="link close-modal">Close this pop-up</button></p>
+              <p class="close"><button class="link modal-close inline">Close this pop-up</button></p>
             </div>
           </div>
         </div>
@@ -208,6 +207,7 @@
     <script type="text/javascript" src='js/vendor/rrose-src.js'></script>
     <script type="text/javascript" src='js/vendor/leaflet.groupedlayercontrol.js'></script>
 
+    <script type="text/javascript" src="js/stamen/stamen.utils.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.hasher.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.embeddem.js"></script>
 
