Indicate available features by filter, #45

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
           <p class='txt-copy panel-headline'>Filter by status:</p>
           <div class="filter-row status-filters">
             <ul class="clearfix">
-              <li><button class="link filter-btn" data-key="Status" data-value="reset">All</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="completed">Completed</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning</button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="stalled">Stalled</button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="reset">All<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="implemented">Implemented<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="Status" data-value="stalled">Stalled<span class="counts"></span></button></li>
             </ul>
           </div>
           <!--
