Fixed data keys

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                 <ul>
                   <li data-key="Location"><span class="key">Plan Name:</span><span class="value"></span></li>
                   <li data-key="Status"><span class="key">Status:</span><span class="value"></span></li>
-                  <li data-key="Date planning initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
-                  <li data-key="Date plan completed"><span class="key">Date Completed:</span><span class="value"></span></li>
-                  <li data-key="Ocean activities covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
-                  <li data-key="Lead institution(s)"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
+                  <li data-key="Date Planning Initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
+                  <li data-key="Date Plan Completed"><span class="key">Date Completed:</span><span class="value"></span></li>
+                  <li data-key="Ocean Uses Covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
+                  <li data-key="Lead Institution(s)"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
                   <li data-key="Website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
                 </ul>
               </div>
