Added in layer sandwhich
Fixed issue with geojson points not going to correct svg layer
Misc tweaks

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
     <script type="text/javascript" src="js/stamen/stamen.utils.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.hasher.js"></script>
     <script type="text/javascript" src="js/stamen/stamen.embeddem.js"></script>
+    <script type="text/javascript" src="js/stamen/stamen.tile-layer.js"></script>
+    <script type="text/javascript" src="js/stamen/stamen.leaflet-sandwhich.js"></script>
 
     <script type="text/javascript" src='js/MFOM.config.js'></script>
     <script type="text/javascript" src='js/MFOM.data.js'></script>
