Added label layer template
Fixed data keys

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
           <p class='txt-copy panel-headline'>Filter by status:</p>
           <div class="filter-row status-filters">
             <ul class="clearfix">
-              <li><button class="link filter-btn" data-key="Status" data-value="reset">All<span class="counts"></span></button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="implemented">Implemented<span class="counts"></span></button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="underway">Underway<span class="counts"></span></button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="pre-planning">Pre-planning<span class="counts"></span></button></li>
-              <li><button class="link filter-btn" data-key="Status" data-value="stalled">Stalled<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="status" data-value="reset">All<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="status" data-value="implemented">Implemented<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="status" data-value="underway">Underway<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="status" data-value="pre-planning">Pre-planning<span class="counts"></span></button></li>
+              <li><button class="link filter-btn" data-key="status" data-value="stalled">Stalled<span class="counts"></span></button></li>
             </ul>
           </div>
           <!--
@@ -162,13 +162,13 @@
             <div class="tabs-inner">
               <div class="tab" data-tab="details">
                 <ul>
-                  <li data-key="Location"><span class="key">Plan Name:</span><span class="value"></span></li>
-                  <li data-key="Status"><span class="key">Status:</span><span class="value"></span></li>
-                  <li data-key="Date Planning Initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
-                  <li data-key="Date Plan Completed"><span class="key">Date Completed:</span><span class="value"></span></li>
-                  <li data-key="Ocean Uses Covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
-                  <li data-key="Lead Institution(s)"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
-                  <li data-key="Website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
+                  <li data-key="location"><span class="key">Plan Name:</span><span class="value"></span></li>
+                  <li data-key="status"><span class="key">Status:</span><span class="value"></span></li>
+                  <li data-key="date_planning_initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
+                  <li data-key="date_plan_completed"><span class="key">Date Completed:</span><span class="value"></span></li>
+                  <li data-key="ocean_uses_covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
+                  <li data-key="lead_institution"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
+                  <li data-key="website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
                 </ul>
               </div>
               <div class="tab hide" data-tab="description">
