--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         </div>
         <div>
           <ul id="country-selector" class="horizontal-list">
-          <li><button class="link country-btn" data-country="all">ALL</button><button id="about-all" class="link about">?</button></li>
-          <li><button class="link country-btn" data-country="usa">U.S.</button><button id="about-us" class="link about">?</button></li>
-          <li><button class="link country-btn" data-country="can">CANADA</button><button id="about-canada" class="link about">?</button></li>
+          <li><button class="link country-btn" data-country="all">ALL</button><a href="#" id="about-all" class="info-btn">i</a></li>
+          <li><button class="link country-btn" data-country="usa">U.S.</button><a href="#" id="about-us" class="info-btn">i</a></li>
+          <li><button class="link country-btn" data-country="can">CANADA</button><a href="#" id="about-canada" class="info-btn">i</a></li>
           </ul>
         </div>
 
