Removed scroller for inner fields in detail panel, #63

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <button id="resetButton" class="link"><!--<span class="icon-close">&#x2715;</span>--> clear</button>
             <div class="filter-row">
               <ul class="clearfix">
-                <li><button class="link" data-target="details">Details</button></li>
-                <li><button class="link selected" data-target="description">Description</button></li>
+                <li><button class="link selected" data-target="details">Details</button></li>
+                <li><button class="link" data-target="description">Description</button></li>
               </ul>
             </div>
             <div class="tabs-inner">
@@ -166,7 +166,7 @@
                   <li data-key="status"><span class="key">Status:</span><span class="value"></span></li>
                   <li data-key="date_planning_initiated"><span class="key">Date Planning Initiated:</span><span class="value"></span></li>
                   <li data-key="date_plan_completed"><span class="key">Date Completed:</span><span class="value"></span></li>
-                  <li data-key="ocean_uses_covered"><span class="key">Ocean Uses Covered:</span><span class="value scroller"></span></li>
+                  <li data-key="ocean_uses_covered"><span class="key">Ocean Uses Covered:</span><span class="value"></span></li>
                   <li data-key="lead_institution"><span class="key">Lead Institution(s):</span><span class="value"></span></li>
                   <li data-key="website"><span class="key">Website:</span><span class="value"><a href=""></a></span></li>
                 </ul>
